@BradBot_1 fixed the funi handler